Add ig in footer, logo in header, booking form

--- a/location.html
+++ b/location.html
@@ -15,6 +15,12 @@
     <!-- NAVBAR SECTION -->
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
+        <img
+          src="assets/images/logo.jpeg"
+          alt="Flying Saucers Logo"
+          class="me-2"
+          style="height: 50px"
+        />
         <a class="navbar-brand" href="index.html">Flying Saucers</a>
         <button
           class="navbar-toggler"
@@ -39,7 +45,10 @@
               <a class="nav-link" href="events.html">Events</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="location.html"
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="location.html"
                 >Location</a
               >
             </li>
@@ -79,7 +88,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-8 col-md-10">
             <div class="card shadow-sm border-0">
-              <div class="card-body" style="background-color: #fff1f1;">
+              <div class="card-body" style="background-color: #fff1f1">
                 <h1 class="fw-bold text-center mb-4">Our Location</h1>
                 <p class="lead text-center">
                   We are located off the Clifton Triangle (South), opposite The
@@ -102,7 +111,7 @@
                 src="https://www.google.com/maps/embed?pb=!4v1682681234567!6m8!1m7!1suCZ630H59fB90M8YtGJ89g!2m2!1d51.4558863!2d-2.6079508!3f97.41!4f85!5f0.7820865974627469"
                 width="600"
                 height="450"
-                style="border:0;"
+                style="border: 0"
                 allowfullscreen=""
                 loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"
@@ -114,16 +123,29 @@
     </section>
 
     <footer class="bg-light text-center text-lg-start">
-      <div class="text-center p-3" style="background-color: #9689c3">
+      <div
+        class="text-center p-2 d-flex justify-content-center align-items-center"
+        style="background-color: #9689c3"
+      >
         © 2025 Flying Saucers |
         <a
-          class="text-dark"
-          href="https://www.facebook.com/profile.php?id=100063702004577#"
-          >Facebook</a
+          href="https://www.instagram.com/flying_saucers_bristol_/#"
+          class="text-black"
+          target="_blank"
         >
+          <i
+            class="fa-brands fa-instagram"
+            style="font-size: 1.5rem; margin-left: 6px; margin-top: 2px"
+            href="https://www.instagram.com/flying_saucers_bristol_/#"
+          ></i>
+        </a>
       </div>
     </footer>
 
+    <script
+      src="https://kit.fontawesome.com/0d8c169f78.js"
+      crossorigin="anonymous"
+    ></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
