--- a/booking.html
+++ b/booking.html
@@ -15,6 +15,12 @@
     <!-- NAVBAR SECTION -->
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
+        <img
+          src="assets/images/logo.jpeg"
+          alt="Flying Saucers Logo"
+          class="me-2"
+          style="height: 50px"
+        />
         <a class="navbar-brand" href="index.html">Flying Saucers</a>
         <button
           class="navbar-toggler"
@@ -79,31 +85,82 @@
         <div class="row justify-content-center">
           <div class="col-lg-8 col-md-10">
             <div class="card shadow-sm border-0">
-              <div class="card-body" style="background-color: #fff1f1;">
+              <div class="card-body" style="background-color: #fff1f1">
                 <h1 class="fw-bold text-center mb-4">Booking</h1>
-                <p class="lead">
-                  To book a 2-hour pottery painting session, please email:
+                <p class="text-center">
+                  Book your pottery painting session with us today!
                 </p>
-                <p class="lead text-center">
-                  <a href="mailto:studio@flyingsaucers.co.uk" class="text-decoration-none"
-                    >studio@flyingsaucers.co.uk</a
+                <form>
+                  <div class="mb-3">
+                    <label for="datetime" class="form-label"
+                      >Preferred Date and Time</label
+                    >
+                    <input
+                      type="datetime-local"
+                      class="form-control"
+                      id="datetime"
+                      name="datetime"
+                    />
+                  </div>
+                  <div class="mb-3">
+                    <label for="exampleInputEmail1" class="form-label"
+                      >Name</label
+                    >
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="name"
+                      aria-describedby="nameHelp"
+                    />
+                  </div>
+                  <div class="mb-3">
+                    <label for="exampleInputEmail1" class="form-label"
+                      >Email address</label
+                    >
+                    <input
+                      type="email"
+                      class="form-control"
+                      id="email"
+                      aria-describedby="emailHelp"
+                    />
+                    <div id="emailHelp" class="form-text">
+                      We'll never share your email with anyone else.
+                    </div>
+                  </div>
+                  <div class="mb-3">
+                    <label for="exampleInputPassword1" class="form-label"
+                      >Number of people</label
+                    >
+                    <input type="text" class="form-control" id="people" />
+                  </div>
+                  <div class="mb-3">
+                    <label for="exampleInputPassword1" class="form-label"
+                      >Any special requirements?</label
+                    >
+                    <input
+                      type="textarea"
+                      class="form-control"
+                      id="requirements"
+                    />
+                  </div>
+                  <div class="mb-3 form-check">
+                    <input
+                      type="checkbox"
+                      class="form-check-input"
+                      id="exampleCheck1"
+                    />
+                    <label class="form-check-label" for="exampleCheck1"
+                      >I want to stay updated by email!</label
+                    >
+                  </div>
+                  <button
+                    type="submit"
+                    class="btn"
+                    style="background-color: #9689c3; color: white"
                   >
-                </p>
-                <p class="lead">Include the following details:</p>
-                <ul class="list-group list-group-flush mb-4">
-                  <li class="list-group-item" style="background-color: #fff1f1;">- Name</li>
-                  <li class="list-group-item" style="background-color: #fff1f1;">- Contact Number</li>
-                  <li class="list-group-item" style="background-color: #fff1f1;">- Ideal date and time</li>
-                  <li class="list-group-item" style="background-color: #fff1f1;">- Number of adults and children</li>
-                  <li class="list-group-item" style="background-color: #fff1f1;">- Any special requirements</li>
-                </ul>
-                <p class="lead">
-                  The more advanced notice you give us, the more likely you will
-                  get your preferred date.
-                </p>
-                <p class="lead text-center">
-                  We look forward to welcoming you to our studio!
-                </p>
+                    Submit
+                  </button>
+                </form>
               </div>
             </div>
           </div>
@@ -112,16 +169,29 @@
     </section>
 
     <footer class="bg-light text-center text-lg-start">
-      <div class="text-center p-3" style="background-color: #9689c3">
+      <div
+        class="text-center p-2 d-flex justify-content-center align-items-center"
+        style="background-color: #9689c3"
+      >
         © 2025 Flying Saucers |
         <a
-          class="text-dark"
-          href="https://www.facebook.com/profile.php?id=100063702004577#"
-          >Facebook</a
+          href="https://www.instagram.com/flying_saucers_bristol_/#"
+          class="text-black"
+          target="_blank"
         >
+          <i
+            class="fa-brands fa-instagram"
+            style="font-size: 1.5rem; margin-left: 6px; margin-top: 2px"
+            href="https://www.instagram.com/flying_saucers_bristol_/#"
+          ></i>
+        </a>
       </div>
     </footer>
 
+    <script
+      src="https://kit.fontawesome.com/0d8c169f78.js"
+      crossorigin="anonymous"
+    ></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
