--- a/index.html
+++ b/index.html
@@ -124,6 +124,43 @@
           a lifetime!
         </p>
 
+        <!-- Carousel -->
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="assets/images/saucers2.jpeg" class="d-block w-100" style="max-height: 400px; object-fit: cover;" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Inside our store!</h5>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="assets/images/saucers1.jpeg" class="d-block w-100" style="max-height: 400px; object-fit: cover;" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Works of art!</h5>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="assets/images/saucers5.jpg" class="d-block w-100" style="max-height: 400px; object-fit: cover;" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Autumn Inspiration</h5>
+              </div>
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+
         <!-- HOW IT WORKS SECTION -->
         <h3 class="fw-bold mt-4">How it works</h3>
         <ul class="list lead">
