Add contact us section

--- a/index.html
+++ b/index.html
@@ -44,9 +44,6 @@
               <a class="nav-link" href="booking.html">Booking</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="events.html">Events</a>
-            </li>
-            <li class="nav-item">
               <a class="nav-link" href="location.html">Location</a>
             </li>
             <li class="nav-item">
@@ -62,11 +59,11 @@
               >
                 More
               </a>
-              <ul class="dropdown-menu">
+              <ul class="dropdown-menu" style="background-color: #ffecec">
                 <li>
                   <a class="dropdown-item" href="faqs.html">Answers to FAQs</a>
                 </li>
-                <li><a class="dropdown-item" href="links.html">Links</a></li>
+                <li><a class="dropdown-item" href="events.html">Events</a></li>
                 <li>
                   <a class="dropdown-item" href="group-sessions.html"
                     >Group Sessions</a
