--- a/location.html
+++ b/location.html
@@ -36,21 +36,15 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
+              <a class="nav-link active" aria-current="page" href="index.html"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="booking.html">Booking</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="events.html">Events</a>
-            </li>
-            <li class="nav-item">
-              <a
-                class="nav-link active"
-                aria-current="page"
-                href="location.html"
-                >Location</a
-              >
+              <a class="nav-link" href="location.html">Location</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact-us.html">Contact Us</a>
@@ -65,11 +59,11 @@
               >
                 More
               </a>
-              <ul class="dropdown-menu">
+              <ul class="dropdown-menu" style="background-color: #ffecec">
                 <li>
                   <a class="dropdown-item" href="faqs.html">Answers to FAQs</a>
                 </li>
-                <li><a class="dropdown-item" href="links.html">Links</a></li>
+                <li><a class="dropdown-item" href="events.html">Events</a></li>
                 <li>
                   <a class="dropdown-item" href="group-sessions.html"
                     >Group Sessions</a
