--- a/booking.html
+++ b/booking.html
@@ -36,12 +36,12 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
-                >Home</a
-              >
+              <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="booking.html">Booking</a>
+              <a class="nav-link active" aria-current="page" href="booking.html"
+                >Booking</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="location.html">Location</a>
@@ -59,11 +59,12 @@
               >
                 More
               </a>
-              <ul class="dropdown-menu" style="background-color: #ffecec">
+              <ul class="dropdown-menu">
                 <li>
                   <a class="dropdown-item" href="faqs.html">Answers to FAQs</a>
                 </li>
                 <li><a class="dropdown-item" href="events.html">Events</a></li>
+                <li><a class="dropdown-item" href="links.html">Links</a></li>
                 <li>
                   <a class="dropdown-item" href="group-sessions.html"
                     >Group Sessions</a
