--- a/contact-us.html
+++ b/contact-us.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Contact Us - Flying Saucers</title>
+    <meta name="description" content="Get in touch with Flying Saucers for inquiries or assistance. Fill out our contact form and we'll respond promptly.">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css"
       rel="stylesheet"
