--- a/location.html
+++ b/location.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Location - Flying Saucers</title>
+    <meta name="description" content="Find Flying Saucers at 9 Byron Place, Bristol, BS8 1JT. Located off the Clifton Triangle, opposite The Brass Pig.">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css"
       rel="stylesheet"
