--- a/booking.html
+++ b/booking.html
@@ -11,16 +11,16 @@
       integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7"
       crossorigin="anonymous"
     />
+    <link href="assets/css/style.css" rel="stylesheet" />
   </head>
-  <body style="background-color: #ffecec">
+  <body class="bgcolour">
     <!-- NAVBAR SECTION -->
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
         <img
           src="assets/images/logo.jpeg"
           alt="Flying Saucers Logo"
-          class="me-2"
-          style="height: 50px"
+          class="me-2 logo"
         />
         <a class="navbar-brand" href="index.html">Flying Saucers</a>
         <button
@@ -60,12 +60,11 @@
               >
                 More
               </a>
-              <ul class="dropdown-menu">
+              <ul class="dropdown-menu bgcolour">
                 <li>
                   <a class="dropdown-item" href="faqs.html">Answers to FAQs</a>
                 </li>
                 <li><a class="dropdown-item" href="events.html">Events</a></li>
-                <li><a class="dropdown-item" href="links.html">Links</a></li>
                 <li>
                   <a class="dropdown-item" href="group-sessions.html"
                     >Group Sessions</a
@@ -84,7 +83,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-8 col-md-10">
             <div class="card shadow-sm border-0">
-              <div class="card-body" style="background-color: #fff1f1">
+              <div class="card-body lighterbg">
                 <h1 class="fw-bold text-center mb-4">Booking</h1>
                 <p class="text-center">
                   Book your pottery painting session with us today!
@@ -154,8 +153,7 @@
                   </div>
                   <button
                     type="submit"
-                    class="btn"
-                    style="background-color: #9689c3; color: white"
+                    class="btn purplebutton"
                   >
                     Submit
                   </button>
@@ -169,8 +167,7 @@
 
     <footer class="bg-light text-center text-lg-start">
       <div
-        class="text-center p-2 d-flex justify-content-center align-items-center"
-        style="background-color: #9689c3"
+        class="text-center p-2 d-flex justify-content-center align-items-center footercolour"
       >
         © 2025 Flying Saucers |
         <a
@@ -179,8 +176,7 @@
           target="_blank"
         >
           <i
-            class="fa-brands fa-instagram"
-            style="font-size: 1.5rem; margin-left: 6px; margin-top: 2px"
+            class="fa-brands fa-instagram igbrand"
             href="https://www.instagram.com/flying_saucers_bristol_/#"
           ></i>
         </a>
