--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
       integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7"
       crossorigin="anonymous"
     />
+    <link href="assets/css/style.css" rel="stylesheet" />
   </head>
-  <body style="background-color: #ffecec">
+  <body class="bgcolour">
     <!-- NAVBAR SECTION -->
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
         <img
           src="assets/images/logo.jpeg"
           alt="Flying Saucers Logo"
-          class="me-2"
-          style="height: 50px"
+          class="me-2 logo"
         />
         <a class="navbar-brand" href="index.html">Flying Saucers</a>
         <button
@@ -60,7 +60,7 @@
               >
                 More
               </a>
-              <ul class="dropdown-menu" style="background-color: #ffecec">
+              <ul class="dropdown-menu bgcolour">
                 <li>
                   <a class="dropdown-item" href="faqs.html">Answers to FAQs</a>
                 </li>
@@ -81,21 +81,15 @@
     <section>
       <div
         class="p-5 mb-2 text-center"
-        style="
-          background-image: url('assets/images/flyingsaucers.png');
-          background-size: cover;
-          background-position: center;
-          color: white;
-        "
+        id="heroimage"
       >
         <div class="container-fluid py-5">
           <h1 class="display-5 fw-bold">Flying Saucers</h1>
           <p class="col-md-8 mx-auto fs-4">The painting pottery café</p>
           <a
-            class="btn btn-lg"
+            class="btn btn-lg purplebutton"
             href="booking.html"
             type="button"
-            style="background-color: #9689c3; color: white"
             >Book Now</a
           >
         </div>
@@ -131,19 +125,19 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="assets/images/saucers2.jpeg" class="d-block w-100" style="max-height: 400px; object-fit: cover;" alt="...">
+              <img src="assets/images/saucers2.jpeg" class="d-block w-100 carouselitem" alt="...">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Inside our store!</h5>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="assets/images/saucers1.jpeg" class="d-block w-100" style="max-height: 400px; object-fit: cover;" alt="...">
+              <img src="assets/images/saucers1.jpeg" class="d-block w-100 carouselitem" alt="...">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Works of art!</h5>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="assets/images/saucers5.jpg" class="d-block w-100" style="max-height: 400px; object-fit: cover;" alt="...">
+              <img src="assets/images/saucers5.jpg" class="d-block w-100 carouselitem" alt="...">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Autumn Inspiration</h5>
               </div>
@@ -195,8 +189,7 @@
 
     <footer class="bg-light text-center text-lg-start">
       <div
-        class="text-center p-2 d-flex justify-content-center align-items-center"
-        style="background-color: #9689c3"
+        class="text-center p-2 d-flex justify-content-center align-items-center footercolour"
       >
         © 2025 Flying Saucers |
         <a
@@ -205,8 +198,7 @@
           target="_blank"
         >
           <i
-            class="fa-brands fa-instagram"
-            style="font-size: 1.5rem; margin-left: 6px; margin-top: 2px"
+            class="fa-brands fa-instagram igbrand"
             href="https://www.instagram.com/flying_saucers_bristol_/#"
           ></i>
         </a>
