--- a/location.html
+++ b/location.html
@@ -11,16 +11,16 @@
       integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7"
       crossorigin="anonymous"
     />
+    <link href="assets/css/style.css" rel="stylesheet" />
   </head>
-  <body style="background-color: #ffecec">
+  <body class="bgcolour">
     <!-- NAVBAR SECTION -->
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
         <img
           src="assets/images/logo.jpeg"
           alt="Flying Saucers Logo"
-          class="me-2"
-          style="height: 50px"
+          class="me-2 logo"
         />
         <a class="navbar-brand" href="index.html">Flying Saucers</a>
         <button
@@ -60,7 +60,7 @@
               >
                 More
               </a>
-              <ul class="dropdown-menu" style="background-color: #ffecec">
+              <ul class="dropdown-menu bgcolour">
                 <li>
                   <a class="dropdown-item" href="faqs.html">Answers to FAQs</a>
                 </li>
@@ -83,7 +83,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-8 col-md-10">
             <div class="card shadow-sm border-0">
-              <div class="card-body" style="background-color: #fff1f1">
+              <div class="card-body lighterbg">
                 <h1 class="fw-bold text-center mb-4">Our Location</h1>
                 <p class="lead text-center">
                   We are located off the Clifton Triangle (South), opposite The
@@ -119,8 +119,7 @@
 
     <footer class="bg-light text-center text-lg-start">
       <div
-        class="text-center p-2 d-flex justify-content-center align-items-center"
-        style="background-color: #9689c3"
+        class="text-center p-2 d-flex justify-content-center align-items-center footercolour"
       >
         © 2025 Flying Saucers |
         <a
@@ -129,8 +128,7 @@
           target="_blank"
         >
           <i
-            class="fa-brands fa-instagram"
-            style="font-size: 1.5rem; margin-left: 6px; margin-top: 2px"
+            class="fa-brands fa-instagram igbrand"
             href="https://www.instagram.com/flying_saucers_bristol_/#"
           ></i>
         </a>
