--- a/booking.html
+++ b/booking.html
@@ -98,6 +98,7 @@
                       class="form-control"
                       id="datetime"
                       name="datetime"
+                      required
                     />
                   </div>
                   <div class="mb-3">
@@ -109,6 +110,7 @@
                       class="form-control"
                       id="name"
                       aria-describedby="nameHelp"
+                      required
                     />
                   </div>
                   <div class="mb-3">
@@ -120,6 +122,7 @@
                       class="form-control"
                       id="email"
                       aria-describedby="emailHelp"
+                      required
                     />
                     <div id="emailHelp" class="form-text">
                       We'll never share your email with anyone else.
@@ -129,7 +132,7 @@
                     <label for="exampleInputPassword1" class="form-label"
                       >Number of people</label
                     >
-                    <input type="text" class="form-control" id="people" />
+                    <input type="text" class="form-control" id="people" required/>
                   </div>
                   <div class="mb-3">
                     <label for="exampleInputPassword1" class="form-label"
@@ -139,6 +142,7 @@
                       type="textarea"
                       class="form-control"
                       id="requirements"
+                      required
                     />
                   </div>
                   <div class="mb-3 form-check">
@@ -146,6 +150,7 @@
                       type="checkbox"
                       class="form-check-input"
                       id="exampleCheck1"
+                      required
                     />
                     <label class="form-check-label" for="exampleCheck1"
                       >I want to stay updated by email!</label
